# AI

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  run.ps1  run.sh
src/: AI.cpp  main.cpp  threadPool.cpp
src/include/: datasets.h  threadPool.h  utils.h
